# jppml

./: .gitignore  Interpreter  LICENSE.md  Makefile  README.md  format.py  jppml.cabal
Jppml/: Abs.hs  Doc.txt  Doc.txt.bak  ErrM.hs  Lex.x  Par.y.bak  Print.hs  Print.hs.bak  Test.hs
app/: Main.hs
bad/: 01-01-lexer-error.ml  01-02-syntax-error.ml  02-01-missing-symbol.ml  02-02-missing-module.ml  02-03-recursive-int-value.ml  02-04-type-redefinition.ml  02-05-constructor-redefinition.ml  02-06-conflicting-bindings.ml  02-07-conflicting-bindings-in-pattern.ml  03-01-wrong-number-of-arguments.ml  04-01-type-mismatch.ml  04-02-impossible-type.ml  04-03-incompatible-uses-of-free-type.ml  05-01-division-by-zero.ml  05-02-raise.ml  05-03-stdlib-error.ml  05-04-non-exhaustive-pattern-match.ml
good/: 01-01-basic-types.ml  01-02-hello-world.ml  02-01-arithmetic-and-comparisons.ml  03-01-conditionals.ml  03-01-variables-and-assignment.ml  04-01-functions-1.ml  05-01-functions-2.ml  06-01-division-by-zero.ml  06-02-custom-error.ml  07-01-nested-let.ml  08-01-lists-pattern-matching.ml  09-01-lists-builtins.ml  10-01-lists-sugar.ml  11-01-lists-of-any-type.ml  12-01-algebraic-types.ml  12-02-mutally-recursive-types.ml  12-03-use-of-constructor-as-function.ml  14-01-algebraic-types.ml  14-01-polymorphic-types.ml  15-01-nested-pattern-matching.ml  50-01-list-module.ml  50-02-option-module.ml  50-03-example--peano.ml  50-04-example--fizzbuzz.ml  50-05-example--factorial.ml  50-06-example--insertion-sort.ml  50-07-example--factorial-with-function-composition.ml  50-08-example--symbolic-computation.ml
parser/: Makefile.bak  jppml.cf
parser/Jppml/: Abs.hs.bak  Lex.hs  Lex.x.bak  Par.hs  Par.info  Par.y  Skel.hs  Skel.hs.bak  Test
src/: AbsSyntax.hs  AbsUtil.hs  Core.hs  Core.ml  DocSyntax.txt  Eval.hs  Infer.hs  Interpreter.hs  LexSyntax.hs  LexSyntax.x  List.ml  Option.ml  ParSyntax.hs  ParSyntax.info  ParSyntax.y  Preprocess.hs  PrintSyntax.hs  SkelSyntax.hs  Syntax.cf  TestSyntax.hs  Typecheck.hs  Util.hs
test/: Main.hs  test_grammar.txt  test_interpreter.txt  test_preprocessor.txt  test_typecheck.txt
