cabal-version:      3.0
name:               jppml
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jonasz Aleszkiewicz
maintainer:         43296251+Aleshkev@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
    import:           warnings
    exposed-modules:  AbsSyntax, LexSyntax, ParSyntax, PrintSyntax,
                      AbsUtil, Preprocess, Infer, Typecheck, Eval, Core, Util
    other-modules:    
    default-extensions: LambdaCase, TupleSections
    -- other-extensions:
    build-depends:    base, containers, array, text, mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable jppml
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, containers, array, text, mtl,
        jppml

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite jppml-test
    import:           warnings
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,  containers, array, text, mtl, directory,
        jppml
